@@ -5,6 +5,12 @@
 // 	- Details.
 //========================================
 
+01/17/2010
+	r116 [Jobbie]
+	* Fixed an issue which other client from 20091118 doesn't show cast bar.
+	* Fixed the define client version in mmo.h which causes client crash when someone pm'ed you.
+	* Fixed a typo on rev108 commit which causes compile errors.
+
 01/15/2010
 	r107 [LimitLine]
 	* Added chance to change enemy's element to Poison with Cloud Kill.
